Portfolio page/navbar
added styling to the navbar to target nav specific unordered lists and added 'fluff' to the portfolio page

--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -12,8 +12,11 @@ p {
 /*navbar start*/
 nav{
     text-align: center;
+    padding: 10px;
+    background-color: aliceblue;
+    
 }
-li{
+.navbar {
     display: inline;
     margin-left: 40px;
     text-align:justify;
