--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -1,12 +1,40 @@
 body {
-    background-color: aquamarine;
+    background-color: white;
 }
 p {
     color: crimson;
 }
+#center {
+    text-align: center;
+}
+section::after {
+content: "";
+display: table;
+clear: both;
+}
+
+.owner {
+    float: left;
+    margin-left: 100px;
+    margin-top:50px;
+    padding: 30px;
+    width:500px;
+    height: 200px;
+    border: 2px solid black;
+}
+.about {
+    float: right;
+    margin-right: 100px;
+    margin-top: 30px;
+    padding: 30px;
+    width:500px;
+    height: 200px;
+    border: 2px solid black;
+}
 /*picture styles start*/
 .image {
     text-align: center;
+    margin: 10px;
 }
 /*picture styles end*/
 /*navbar start*/
