main-pic & footer
added a picture next to the about and made a footer to duplicate for more pages

--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -50,3 +50,13 @@ nav{
     text-align:justify;
 }
 /*navbar end*/
+/*footer start*/
+footer {
+    background-color: aliceblue;
+    text-align: justify;
+    padding: 30px;
+    margin-top: 50px;
+}
+
+/*footer end*/
+
