--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -1,79 +1,113 @@
 body {
     background-color: white;
 }
-p {
-    color: crimson;
+
+.pport {
+    color: whitesmoke;
 }
+
 #center {
     text-align: center;
 }
+
 section::after {
-content: "";
-display: table;
-clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .owner {
     float: left;
     margin-left: 100px;
-    margin-top:50px;
+    margin-top: 50px;
     padding: 30px;
-    width:500px;
+    width: 500px;
     height: 200px;
     border: 2px solid black;
 }
+
 .about {
     float: right;
     margin-right: 100px;
     margin-top: 30px;
     padding: 30px;
-    width:500px;
+    width: 500px;
     height: 200px;
     border: 2px solid black;
 }
+
 /*picture styles start*/
 .image {
     text-align: center;
     margin: 10px;
 }
+
 /*picture styles end*/
 /*Portfolio start */
 .phead {
     text-align: center;
 }
+
 .psec {
     background-color: grey;
     text-align: center;
 }
+
 .pul {
-    display:inline;
+    display: inline;
     text-align: center;
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.portinfo {
+    text-align: right;
+
+}
+#potable {
+    width: 95%;
+    margin: 50px;
+}
+
+td {
+    border: 1px solid black;
+    text-align: center;
+    background-color: rgba(164, 160, 160, 0.525);
+    padding: 15px;
+}
+.thead {
+    border: 1px solid black;
+    text-align: center;
+    background-color: aliceblue;
+}
+
 /*portfolio end*/
+
 /*navbar start*/
-.navi{
+.navi {
     text-align: center;
     padding: 10px;
     background-color: aliceblue;
     padding-top: 20px;
-    
+
 }
+
 .navibar {
     display: inline;
     margin-left: 40px;
-    text-align:justify;
+    text-align: justify;
 }
+
 /*navbar end*/
+
 /*footer start*/
 footer {
     background-color: aliceblue;
     padding: 30px;
     margin-top: 50px;
-    position:inherit;
-    bottom:0;
+    position: inherit;
+    bottom: 0;
     width: 100%;
 }
-/*footer end*/
 
+/*footer end*/
