--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -1,115 +1,130 @@
 body {
-    background-color: white;
+  background-color: white;
 }
 
 .pport {
-    color: whitesmoke;
+  color: whitesmoke;
 }
 
 #center {
-    text-align: center;
+  text-align: center;
 }
 
 section::after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .owner {
-    float: left;
-    margin-left: 100px;
-    margin-top: 50px;
-    padding: 30px;
-    width: 500px;
-    height: 200px;
-    border: 2px solid black;
+  float: left;
+  margin-left: 100px;
+  margin-top: 50px;
+  padding: 30px;
+  width: 500px;
+  height: 200px;
+  border: 2px solid black;
 }
 
 .about {
-    float: right;
-    margin-right: 100px;
-    margin-top: 30px;
-    padding: 30px;
-    width: 500px;
-    height: 200px;
-    border: 2px solid black;
+  float: right;
+  margin-right: 100px;
+  margin-top: 30px;
+  padding: 30px;
+  width: 500px;
+  height: 200px;
+  border: 2px solid black;
 }
 
 /*picture styles start*/
 .image {
-    text-align: center;
-    margin: 10px;
+  text-align: center;
+  margin: 10px;
 }
 
 /*picture styles end*/
 /*Portfolio start */
 .phead {
-    text-align: center;
+  text-align: center;
 }
 
 .psec {
-    background-color: grey;
-    text-align: center;
+  background-color: grey;
+  text-align: center;
 }
 
 .pul {
-    display: inline;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
+  display: inline;
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .portinfo {
-    text-align: right;
-
+  text-align: right;
 }
 #potable {
-    width: 95%;
-    margin: 50px;
-   
+  width: 95%;
+  margin: 50px;
 }
 
 td {
-    border: 1px solid black;
-    text-align: center;
-    background-color: rgba(164, 160, 160, 0.525);
-    padding: 15px;
-    margin: 15px;
+  border: 1px solid black;
+  text-align: center;
+  background-color: rgba(164, 160, 160, 0.525);
+  padding: 15px;
+  margin: 15px;
 }
 .thead {
-    border: 1px solid black;
-    text-align: center;
-    background-color: aliceblue;
+  border: 1px solid black;
+  text-align: center;
+  background-color: aliceblue;
 }
 
 /*portfolio end*/
 
 /*navbar start*/
 .navi {
-    text-align: center;
-    padding: 10px;
-    background-color: aliceblue;
-    padding-top: 20px;
-
+  text-align: center;
+  padding: 10px;
+  background-color: aliceblue;
+  padding-top: 20px;
 }
 
 .navibar {
-    display: inline;
-    margin-left: 40px;
-    text-align: justify;
+  display: inline;
+  margin-left: 40px;
+  text-align: justify;
 }
 
 /*navbar end*/
 
 /*footer start*/
 footer {
-    background-color: aliceblue;
-    padding: 30px;
-    margin-top: 50px;
-    position: inherit;
-    bottom: 0;
-    width: 100%;
+  background-color: aliceblue;
+  padding: 30px;
+  margin-top: 50px;
+  position: inherit;
+  bottom: 0;
+  width: 100%;
 }
 
 /*footer end*/
+
+/*Contact page start*/
+.ccenter {
+  text-align: center;
+  margin-top: 150px;
+  margin-left: 25%;
+  border: 2px solid black;
+  height:600px;
+  width: 1000px;
+  background-image: url('https://cdn.hipwallpaper.com/i/48/82/ZMJLWk.jpg') ;
+  background-size: 100% 100%;
+  
+  
+}
+.bccenter{
+    
+}
+/* Contact End */
