--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -121,10 +121,19 @@ footer {
   width: 1000px;
   background-image: url('https://cdn.hipwallpaper.com/i/48/82/ZMJLWk.jpg') ;
   background-size: 100% 100%;
-  
+  color: aliceblue;
+  position:fixed;
+  z-index:8;
+  opacity: .6;
   
 }
 .bccenter{
+  top: 250px;
+  margin-left: 39%;
+  text-align: center;
+    margin-top: 120px;
+    position:fixed;
+    z-index: 9;
     
 }
 /* Contact End */
