--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -1,5 +1,7 @@
 body {
   background-color: white;
+
+  min-height: 100vh;
 }
 
 .pport {
@@ -102,12 +104,14 @@ td {
 
 /*footer start*/
 footer {
-  background-color: aliceblue;
+  background-color: rgb(30, 30, 31);
+  color:aliceblue;
   padding: 30px;
   margin-top: 50px;
-  position: inherit;
-  bottom: 0;
-  width: 100%;
+  position: sticky;
+  top: 100%;
+  text-align: center;
+  left:0;
 }
 
 /*footer end*/
@@ -118,24 +122,22 @@ footer {
   margin-top: 150px;
   margin-left: 25%;
   border: 2px solid black;
-  height:600px;
+  height: 600px;
   width: 1000px;
-  background-image: url('https://cdn.hipwallpaper.com/i/48/82/ZMJLWk.jpg') ;
+  background-image: url("https://cdn.hipwallpaper.com/i/48/82/ZMJLWk.jpg");
   background-size: 100% 100%;
   color: aliceblue;
-  position:fixed;
-  z-index:8;
-  opacity: .6;
-  
+  position: fixed;
+  z-index: 8;
+  opacity: 0.6;
 }
-.bccenter{
+.bccenter {
   top: 250px;
   margin-left: 39%;
   text-align: center;
-    margin-top: 120px;
-    position:fixed;
-    z-index: 9;
-    
+  margin-top: 120px;
+  position: fixed;
+  z-index: 9;
 }
 /* Contact End */
 
