--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -119,15 +119,14 @@ footer {
 /*Contact page start*/
 .ccenter {
   text-align: center;
-  margin-top: 150px;
+  margin-top: 100px;
   margin-left: 25%;
   border: 2px solid black;
   height: 600px;
   width: 1000px;
   background-image: url("https://cdn.hipwallpaper.com/i/48/82/ZMJLWk.jpg");
   background-size: 100% 100%;
-  color: aliceblue;
-  position: fixed;
+  position: absolute;
   z-index: 8;
   opacity: 0.6;
 }
@@ -135,8 +134,8 @@ footer {
   top: 250px;
   margin-left: 39%;
   text-align: center;
-  margin-top: 120px;
-  position: fixed;
+  margin-top: 90px;
+  position:absolute;
   z-index: 9;
 }
 /* Contact End */
