--- a/Pages/styles.css
+++ b/Pages/styles.css
@@ -5,10 +5,9 @@ body {
 .title {
   font-size: 3em;
   text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   position: absolute;
   margin-left: 1em;
-
 }
 #center {
   text-align: center;
@@ -145,9 +144,24 @@ footer {
 /* Contact End */
 
 /* Services Start*/
+.sbackground {
+  position:absolute;
+  z-index: 8;
+  width:118rem;
+  height:46rem;
+  background-image: url('https://wallpaperaccess.com/full/1108653.jpg');
+}
 .sinput {
-  width: 60em;
-  height: 10em;
+  text-align: center;
+  position: absolute;
+  border: 1px solid black;
+  padding: 15px;
+  width: 50%;
+  margin-left: 28em;
+  margin-top: 2em;
+  background: rgba(164, 160, 160, 0.525);
+  color: rgb(252, 252, 252);
+  z-index: 9;
 }
 /* Services End*/
 /* Survey Start */
