--- a/Website/CSS/portfoli.css
+++ b/Website/CSS/portfoli.css
@@ -19,7 +19,9 @@
   }
   
   .portinfo {
-    text-align: right;
+    text-align: start;
+    padding: 20px;
+    
   }
   #potable {
     width: 95%;
