tested current contact css against bootstrap

--- a/Website/CSS/contact.css
+++ b/Website/CSS/contact.css
@@ -1,5 +1,5 @@
 /*Contact page start*/
-.ccenter {
+/* .ccenter {
     text-align: center;
     margin-top: 50px;
     margin-left: 25%;
@@ -11,13 +11,12 @@
     position: absolute;
     z-index: 8;
     opacity: 0.6;
-  }
-  .bccenter {
+  } */
+  /* .bccenter {
     top: 250px;
-    margin-left: 39%;
     text-align: center;
     margin-top: 90px;
     position: absolute;
     z-index: 9;
-  }
+  } */
   /* Contact End */
