--- a/Website/CSS/index.css
+++ b/Website/CSS/index.css
@@ -1,33 +1,29 @@
 /* Home page start */
 section::after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  .owner {
-    float: left;
-    margin-left: 100px;
-    margin-top: 50px;
-    padding: 30px;
-    width: 500px;
-    height: 200px;
-    border: 2px solid black;
-  }
-  .about {
-    float: right;
-    margin-right: 100px;
-    margin-top: 30px;
-    padding: 30px;
-    width: 500px;
-    height: 200px;
-    border: 2px solid black;
-  }
-  /* Home page end */
-  /*picture styles start*/
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.about {
+  float: right;
+  margin-right: 100px;
+  margin-top: 30px;
+  padding: 30px;
+  width: 500px;
+  height: 200px;
+  border: 2px solid black;
+}
+
+/* Home page end */
+/*picture styles start*/
+.owner {
+  border-radius: 50%;
+}
+
 .image {
-    text-align: center;
-    margin: 10px;
-  }
-  
-  /*picture styles end*/
-  
+  text-align: center;
+  margin: 10px;
+}
+
+/*picture styles end*/
