started stying with owner article

--- a/Website/CSS/index.css
+++ b/Website/CSS/index.css
@@ -18,8 +18,13 @@ section::after {
 /* Home page end */
 /*picture styles start*/
 .owner {
-  border-radius: 50%;
+  border-radius: 100%;
+  height:400px;
+  width:300px;
+
 }
+
+
 
 .image {
   text-align: center;
