--- a/Website/CSS/index.css
+++ b/Website/CSS/index.css
@@ -6,8 +6,8 @@ section::after {
 }
 
 .about {
-  float: right;
-  margin-right: 100px;
+  float:right;
+  margin-right: 300px;
   margin-top: 30px;
   padding: 30px;
   width: 500px;
@@ -19,9 +19,10 @@ section::after {
 /*picture styles start*/
 .owner {
   border-radius: 100%;
-  height:400px;
-  width:300px;
-
+  height: 400px;
+  width: 300px;
+  float: left;
+  
 }
 
 
