--- a/Website/CSS/index.css
+++ b/Website/CSS/index.css
@@ -1,35 +1,46 @@
-/* Home page start */
 section::after {
   content: "";
-  display: table;
+  display: grid;
   clear: both;
 }
 
-.about {
-  float:right;
-  margin-right: 300px;
-  margin-top: 30px;
+.ownerdesc {
+  float: right;
+  margin-right: 200px;
+  margin-top: 100px;
   padding: 30px;
-  width: 500px;
+  width: 850px;
   height: 200px;
-  border: 2px solid black;
 }
 
-/* Home page end */
 /*picture styles start*/
 .owner {
   border-radius: 100%;
-  height: 400px;
-  width: 300px;
+  height: 250px;
+  width: 200px;
   float: left;
-  
+  margin-top: 5em;
+  margin-left: 15em;
 }
 
+.about {
+  float: left;
+  margin-left: 270px;
+  margin-top: 100px;
+  padding: 10px;
+  width: 700px;
+  height: 100px;
+}
 
-
-.image {
-  text-align: center;
-  margin: 10px;
+.aboutpic {
+  width: 250px;
+  height: 200px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  border-radius: 10%;
+}
+.aboutsec {
+  margin-top: 2em;
 }
 
 /*picture styles end*/
