--- a/Website/CSS/styles.css
+++ b/Website/CSS/styles.css
@@ -85,7 +85,7 @@ footer {
   background-color: rgb(30, 30, 31);
   color: aliceblue;
   padding: 20px;
-  
+  margin-top: 5em;
   text-align: center;
   left: 0;
 }
