--- a/Website/CSS/services.css
+++ b/Website/CSS/services.css
@@ -1,21 +1,15 @@
 /* Services Start*/
-.sbackground {
-    position:absolute;
-    z-index: 8;
-    width:118rem;
-    height:46rem;
-    background-image: url('https://wallpaperaccess.com/full/1108653.jpg');
-  }
   .sinput {
     text-align: center;
-    position: absolute;
     border: 1px solid black;
     padding: 15px;
     width: 50%;
-    margin-left: 28em;
-    margin-top: 2em;
-    background: rgba(164, 160, 160, 0.525);
-    color: rgb(252, 252, 252);
-    z-index: 9;
+    margin-left: 24em;
+    margin-top: 5em;
+  }
+  .checkbox {
+    width:50%;
+    text-align: center;
+
   }
   /* Services End*/
